<resources>
    <string name="app_name">BazaarApp</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="login"><u>Login !</u></string>
    <string name="signup"><u>SignUp Here</u></string>
    <string name="signup_with_googleplay">SignIn with Google Play</string>
    <string name="signup_with_facebook">SignIn with Facebook</string>
    <string name="signup_with_twitter">SignIn with Twitter</string>
    <string name="appname">BazaarApp</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="logosplash">logoSplash</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
